syntax = "proto3";
package debug.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/inngest/inngest/proto/gen/debug/v1;debug";

message PauseRequest {
  string item_id = 1;
  string event_name = 2;
  string workspace_id = 3;
}

message PauseResponse { bytes data = 1; }

message IndexRequest {
  string event_name = 1;
  string workspace_id = 2;
}

message BlockInfo {
  string id = 1;
  int64 length = 2;
  int64 first_timestamp = 3;
  int64 last_timestamp = 4;
  int64 delete_count = 5;
}

message IndexResponse {
  string workspace_id = 1;
  string event_name = 2;
  int64 buffer_length = 3;
  repeated BlockInfo blocks = 4;
}

message BlockPeekRequest {
  string event_name = 1;
  string workspace_id = 2;
  string block_id = 3;
}

message BlockPeekResponse {
  string block_id = 1;
  int64 total_count = 2;
  repeated string pause_ids = 3;
}

message BlockDeletedRequest {
  string event_name = 1;
  string workspace_id = 2;
  string block_id = 3;
}

message BlockDeletedResponse {
  string block_id = 1;
  int64 total_count = 2;
  repeated string deleted_ids = 3;
}
